organizing folders and files

--- a/the-complete-js-course-2020-jonas-schmedtmann/1.basics/3.arrays.md
+++ b/the-complete-js-course-2020-jonas-schmedtmann/1.basics/3.arrays.md
@@ -49,7 +49,7 @@ john.unshift('Mr.');
 ```js
 john.pop();
 ```
-.unshift() **removes** the element from the **beginning** of the array
+.shift() **removes** the element from the **beginning** of the array
 ```js
 john.shift();
 ```
