--- a/the-complete-js-course-2020-jonas-schmedtmann/1.basics/5.loops-and-iterations.md
+++ b/the-complete-js-course-2020-jonas-schmedtmann/1.basics/5.loops-and-iterations.md
@@ -60,7 +60,7 @@ for (var i = 0; i < john.length; i++) {
 ```
 ```js
 for (var i = 0; i < john.length; i++) {
-    if (typeof john[i] !== 'string') continue;
+    if (typeof john[i] !== 'string') break;
     console.log(john[i]);
     /*
       Jonh
