--- a/the-complete-js-course-2020-jonas-schmedtmann/2.behind-the-scenes/2.hoisting.md
+++ b/the-complete-js-course-2020-jonas-schmedtmann/2.behind-the-scenes/2.hoisting.md
@@ -27,7 +27,7 @@ retirement(1990)
 
 **Variables**
 
-In the case of VARIABLES, if it is called before it is declase and definded it it will be undefined
+In the case of VARIABLES, if it is called before it is declared and defined it it will be undefined
 ```js
 console.log('age',age);
 var age = 23;
