evenloop and promises

--- a/5.curso-profesional-js-platzi/2.como-funciona-js.md
+++ b/5.curso-profesional-js-platzi/2.como-funciona-js.md
@@ -38,3 +38,68 @@ Se puede crear nuestras propias reglas por ejemplo
 
 **Byecode**
 
+![js](./notes-assets/09.png)
+
+
+
+
+Google ocupa v8 
+
+![js](./notes-assets/10.png)
+
+Firefox ocupa SpiderMonkey
+
+![js](./notes-assets/11.png)
+
+Edge chackra
+
+![js](./notes-assets/12.png)
+
+Safari JavaScriptCore
+
+![js](./notes-assets/13.png)
+
+
+## EVENTLOOP
+
+Hace que JS parezca multihilo pero JS es singlethread
+
+ejemplo multithread:
+
+- C=
+- Cilk
+- Cilk Plus
+- Cind
+- C#
+- Clojure
+- Concurrent Pascal
+- Emerald
+- Fork – programming language for the PRAM model.
+- Go
+- Java1​
+- ParaSail
+- Rust2​
+- SequenceL
+
+
+JavaScript se organiza usando dos tipos de datos: Stack y MemoryHeap
+
+![js](./notes-assets/14.png)
+
+Stack: Es el registro delas funcionesHay un orden, el stack comienza vacio, al hacer una operacion push vamos poniendo las funciones unas sobre otras dentro del contenedor. pop saca las funciones de la ultima a la primera para vaciar el stack. Lo primero que entra es lo ultimo que sale
+
+![js](./notes-assets/15.png)
+
+Registra el scope de cada cosa
+
+MemoryHeap: Escrutcuta deorganizada, guarda info sobre las variables, elscope etc
+
+TASK QUEU lo primero qu eentra lo primero que sale
+
+![js](./notes-assets/16.png)
+
+Las PROMESAS funcionan diferente, el eventloop le da preferencia a las microtareas
+
+![js](./notes-assets/17.png)
+
+Es importante no hacer tareas bloqueantes
