getters and setters, proxy and generators

--- a/5.curso-profesional-js-platzi/3.fundamentos-intermedios.md
+++ b/5.curso-profesional-js-platzi/3.fundamentos-intermedios.md
@@ -111,3 +111,49 @@
 Son un nuevo feature pero no son tan utilizados.
 
 Funciones dentro de objetos que nos permiten tener propiedasdes virtuales.
+
+Funciones a traves de las cuales podemos leer o modificar atributos de un objeto de manera segura, es decir en vez de asignar o modificar un valor directamente podemos usar un get o set para poner una condición por ejmeplo. Usar un setter para setear un valor de una propiedad de lo bjeto pero antes verificar alguna conficion y por ejemplo, usar un getter para obtener el valor de alguna propiedad del onbjeto pero modificada, por ejemplo .toUppercase.
+
+[Código Facilito --> Curso javaScript - Getters y Setters](https://www.youtube.com/watch?v=qh0ZAx4wlY8)
+
+<ES6
+
+```js
+const curso = {
+  titulo: "Curso JS",
+  videos: 19,
+  tutor: "Uriel",
+  getTutor(){
+    return this.tutor.toUpperCase
+  },
+  setTutor(tutor){
+    if(tutor === "") { return}
+    this.tutor = tuor
+  }
+}
+
+curso.setTutor("Juan")
+curso.getTutor // URIEL
+
+```
+
+>ES6
+
+```js
+const curso = {
+  titulo: "Curso JS",
+  videos: 19,
+  tutor: "Uriel",
+  get tutor(){
+    return this.tutor.toUpperCase
+  },
+  set tutor(tutor){
+    if(tutor === "") { return}
+    this.tutor = tuor
+  }
+}
+
+curso.tutor("Juan")
+curso.tutor // URIEL
+
+```
