--- a/5.curso-profesional-js-platzi/5.apis-del-DOM.md
+++ b/5.curso-profesional-js-platzi/5.apis-del-DOM.md
@@ -1,1 +1,31 @@
 # APIS en el DOM
+
+## FETCH
+Peticiones AJAX, XMLhttpRequest, fetch
+
+Fetch aprovecha las promesas
+
+**abort controller** detener una petición fetch 
+
+Network --> No throttling , alentamos la conección para replicar que cuando se haga una petición y la respuesta sea muy lenta se pueda hacer un abprt controller
+
+```js
+
+let controller = new AbortController()
+
+// Cuando un fetch se cancela devuelve un error por eso es importante manejar el error, la peticion debe estar dentro de un try catch
+// En botón de cargar imagen
+const response = await fetch(url, { signal: controller.signal })
+// blob -> respuesta en forma binaria
+const blob =  await response.blob()
+const imgUrl = URL.createObjectURL(blob)
+img.src = imgUrl
+
+// En boton de detener carga de imagen
+
+controller.abort()
+
+```
+
+## Interception Observer
+Intercepction Observer -> observa un elemento y ve su posición
